--- a/ฺWeb_scraping/home.html
+++ b/ฺWeb_scraping/home.html
@@ -16,4 +16,16 @@
                 <a href="#" class="btn btn-primary">Start</a>
             </div>
         </div>
+
+        <h1>Hello</h1>
+        <div class = "card" id="card-python">
+            <div class="class-header">
+                Python
+            </div>
+            <div class="card-body">
+                <h5 class="card-body">Python for beginner</h5>
+                <p class="card-text">This is just great </p>
+                <a href="#" class="btn btn-primary">Start</a>
+            </div>
+        </div>
     </body>
